fix(tools): make Brave web search tests deterministic